fix: Arrays.asList -> List.of로 변경